Dashboard: Fix some button classes and whitespace

--- a/dashboard.css
+++ b/dashboard.css
@@ -33,7 +33,8 @@ textarea {
 	height: 15em;
 }
 
-input[type=button] {
+input[type=button],
+.button {
 	color: white;
 	border: 1px solid rgb(87, 87, 87);
 	cursor: pointer;
